   EXPT, TAN, TANH, SINH, COSH, LOG, ATAN, RATIONAL, NUMERATOR, DENOMINATOR,
   FLOOR, CEILING, ROUND, TRUNCATE, FLOAT-PRECISION, FLOAT-SIGN, DECODE-FLOAT,
   SCALE-FLOAT, FLOAT-RADIX, FLOAT-DIGITS, INTEGER-DECODE-FLOAT, REALPART,
   IMAGPART, COMPLEX, etc

 - DIGIT-CHAR-P and DIGIT-CHAR will signal an error if the radix is not an
   integer value between 2 and 36, both included.

 - The slot accessors for structures with type VECTOR or LIST now rely on
   the standard function ELT, instead of si:list-nth and si:rplaca-nthcdr.

 - TYPE-OF returns expanded types for arrays. For instance,
   (ARRAY CHARACTER (12)) instead of (STRING 12).

 - C functions which disappear: si_set_compiled_function_name(),
   si_extended_string_concatenate(), assert_type_string(),
   assert_type_character(), assert_type_symbol(), make_symbol(),
   parse_number(), parse_integer(), adjust_displaced().

 - Lisp functions which disappear: si:set-compiled-function-name,
   si:extended-string-concatenate, si:list-nth, si:rplaca-nthcdr.

 - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
   ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string(),
   ecl_fixnum_in_range(), ecl_stringp(), ecl_parse_number(),
   ecl_parse_integer(), ecl_char(), ecl_char_set(), ecl_base_char_p().

 - New Lisp functions: si:wrong-type-argument.

 - Functions renamed: backup_fopen() -> ecl_backup_fopen() char_code() ->
   ecl_char_code(), cl_log1() -> ecl_log1(), cl_log2() -> ecl_log2(),
   NUMBER_TYPE() -> ECL_NUMBER_TYPE_P().

 - LOAD-FOREIGN-LIBRARY accepts an additional keyword argument :SYSTEM-LIBRARY
   which, when true, tells ECL to link object files against the system version
   of that library instead of directly referencing the shared library: i.e. use
   linker flag -lmylib instead of libmylib.so (Brian Spilsbury)

* Contributed code:

 - New examples: cmdline/ls.lsp, ffi/uffi.lsp, ffi/cffi.lsp

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***