@@ -22,12 +22,12 @@
 #ifdef ENABLE_DLOPEN
 # ifdef HAVE_DLFCN_H
 #  include <dlfcn.h>
-#  define INIT_PREFIX "init_"
+#  define INIT_PREFIX "init_fas_"
 # endif
 # ifdef HAVE_MACH_O_DYLD_H
 #  ifndef HAVE_DLFCN_H
 #   include <mach-o/dyld.h>
-#   define INIT_PREFIX "_init_"
+#   define INIT_PREFIX "_init_fas_"
 #  else
 #   undef HAVE_MACH_O_DYLD_H
 #  endif
@@ -43,7 +43,7 @@
 #  include <windef.h>
 #  include <winbase.h>
 #  include <tlhelp32.h>
-#  define INIT_PREFIX "init_"
+#  define INIT_PREFIX "init_fas_"
 # endif
 #endif
 
